--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,10 @@
         "kyslik/column-sortable": "^6.4",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
+        "maatwebsite/excel": "^3.1",
         "nesbot/carbon": "^2.57",
-        "overtrue/laravel-favorite": "2.0.3"
+        "overtrue/laravel-favorite": "2.0.3",
+        "payjp/payjp-php": "^1.2"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
